--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,7 +29,12 @@
         tools:layout="@layout/fragment_task" />
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="kg.geektech.taskapp.ProfileFragment"
+        android:name="kg.geektech.taskapp.ui.profile.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/boardFragment"
+        android:name="kg.geektech.taskapp.ui.onboard.BoardFragment"
+        android:label="fragment_board"
+        tools:layout="@layout/fragment_board" />
 </navigation>
