--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileFragment">
+    tools:context=".ui.profile.ProfileFragment">
 
     <TextView
         android:id="@+id/text_prodfile"
@@ -18,9 +18,9 @@
 
     <ImageView
         android:id="@+id/img_from_gal"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="#212"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/img"
         android:layout_centerInParent="true"
         />
 
