--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,7 +20,7 @@
         android:id="@+id/img_from_gal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/img"
+        android:background="@drawable/sharing"
         android:layout_centerInParent="true"
         />
 
